Fix Submit button alignment
Sets align-items: flex-end on the form to make the button go to the
bottom.

Removed some old commented debug code.

--- a/interactive/css/styles.css
+++ b/interactive/css/styles.css
@@ -2,7 +2,6 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  /* border: 1px solid red; */
 }
 
 .controls-container {
@@ -48,8 +47,7 @@
   gap: 16px;
   flex-wrap: wrap;
 
-  /* was in the tutorial, but doesn't seem to affect anything */
-  /* align-items: flex-end; */
+  align-items: flex-end; /* align the button */
 }
 
 #reactive-form-demo .name-label {
@@ -77,8 +75,6 @@
 
 #flex-direction-container {
   display: flex;
-  /* flex-direction: column; */
-  /* justify-content: center; */
 }
 
 .big-text {
